# strategy-compiler

./: .env.example  .gitignore  README.md  design_decisions.md  requirements.txt  strategy_ir.schema.json
backtest_engine/: __init__.py
backtest_engine/analytics/: __init__.py  attribution.py  metrics.py  report_html.py  reporting.py  result_bundle.py  visualizer.py
backtest_engine/api/: __init__.py  chat.py  compare_runs.py  compile_strategy.py  describe_dataset.py  run_backtest.py  validate_strategy.py
database/db/: README.md  pyproject.toml  requirements.txt
database/db/artifacts/: validation_report.md
database/db/configs/: config.example.yaml
database/db/data/db/: .gitkeep
database/db/sql/: schema.sql  views.sql
database/db/src/: config.py  db.py  main.py
database/db/src/ingest/: dataguide.py  kind.py  sectors.py
database/db/src/transform/: calendar.py  eligibility.py  features.py  financials.py  manifest.py  metadata.py  prices.py  regulatory.py  security_master.py
database/db/src/utils/: calendar_utils.py  hashing.py  io.py  paths.py  ticker.py
database/db/src/validate/: checks.py  report.py
database/db/tests/: test_eligibility.py  test_financials_asof.py  test_ticker.py
docs/: Strategy Compiler.docx  strategy_report_2dbc743c.md  strategy_report_7bcc6077.md  strategy_report_momentum_top30_lowdebt.md  usage.md  사용설명서.md
runs/: .gitkeep
tests/: test_allocators.py  test_contest.py  test_execution.py  test_metrics.py  test_node_executor.py  test_regression.py  test_semantic_validator.py  test_snapshot_loader.py  test_strategy_ir.py
(+41 files in other folders)
